Update: Advantage Icon fix on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -676,7 +676,7 @@ footer .footer--copyrights a {
 
 	/* ========== Start 576 ========== */
 	.advantages--image .advantage-image-svg {
-		width: 160px;
+		width: 75px;
 	}
 	/* ========== End 576 ============ */
 
